# animation_system

./: .gitmodules  CMakeLists.txt  README.md
example/: main.cpp
include/: Animation.h  AnimationComponent.h  AnimationState.h  AnimationStateMachine.h  AnimationSystem.h  EntityStateComponent.h
src/: Animation.cpp  AnimationState.cpp  AnimationStateMachine.cpp  AnimationSystem.cpp
